--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,7 @@
-minimum_dollars_delta: 300
-do_transactions: false
+minimum_dollars_delta: 30000
+do_transactions: true
 regenerate_cycles: true
 regenerate_denom2symbol: true
 fees: 2700
 account: "osmo123kgn90rmdcrhas5fu2anfvnyrhvgurlk7j4es"
+sleep_time: 1
